--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech|Learn</title>
     <!-- fav icons -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/company/fav.png" type="image/x-icon">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -21,6 +21,7 @@
 
 <body>
     <header class="container">
+
         <!-- start nav -->
         <nav class="navbar my-3 navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -59,59 +60,64 @@
                 </div>
             </div>
         </nav>
-
-
         <!-- end nav -->
-        <!-- start home -->
 
+        <!-- carousel sec -->
         <section>
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner">
-                    <div class="carousel-item active " data-bs-interval="10000">
-                        <img src="image/cover/cover-1.png" class="d-block w-100 " alt="...">
-                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
-                            <div class="mb-lg-5 text">
-                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                                <button class="btn btn-outline-primary">Get Started</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="image/cover/cover-2.jpg" class="d-block w-100 " alt="...">
-                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
-                            <div class="mb-lg-5">
-                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                                <button class="btn btn-outline-primary">Get Started</button>
-                            </div>
+                    <div class="carousel-item active">
+                        <img src="image/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  text-dark ">
+                            <h5 class=" fs-2">Get Started Digital Learning</h5>
+                            <p class="fs-6">It is a long established fact <span class="d-none d-md-block">
+                                    that a reader
+                                    will be distracted by the
+                                    readable content of
+                                    a page when looking at its layout.</span></p>
+                            <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="image/cover/cover-3.jpg" class="d-block w-100 " alt="...">
-                        <div class="carousel-caption mb-lg-auto d-flex justify-content-center align-items-center">
-                            <div class="mb-lg-5">
-                                <h5 class="fs-1 fw-bolder">Get Started Digital Learning</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                                <button class="btn btn-outline-primary">Get Started</button>
-                            </div>
+                        <img src="image/cover/cover-2.jpg" class="d-block w-100 h-75" alt="...">
+                        <div class="carousel-caption  text-dark">
+                            <h5 class=" fs-1">Get Started Digital Learning</h5>
+                            <p class="fs-6">It is a long established fact that a reader <span class="d-none d-md-block">
+                                    will be distracted by the
+                                    readable content of
+                                    a page when looking at its layout.</span></p>
+                            <button class="btn btn-primary">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="image/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  text-dark">
+                            <h5 class=" fs-1">Get Started Digital Learning</h5>
+                            <p class="fs-6">It is a long established fact <span class="d-none d-md-block">
+                                    that a reader will be distracted by the
+                                    readable content of
+                                    a page when looking at its layout.</span></p>
+                            <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+
             </div>
         </section>
         <!-- end home -->
+
     </header>
 
     <main class="container">
@@ -221,7 +227,6 @@
 
         </section>
         <!-- end course sectino -->
-
 
         <!-- start work -->
         <section class="my-5">
@@ -335,11 +340,15 @@
                     <P class="text-muted">Graphic Designer</P>
                 </div>
 
-                <div class="col-lg-3 col-sm-12 col-md-6">
+                <div class="col-lg-3 col-sm-12 col-md-6 d-none d-lg-block d-md-block">
                     <img class="img-fluid" src="image/student/student-4.png" alt="">
                     <h4 class="fs-7">Rona Laila</h4>
                     <P class="text-muted">UI/UX Designer</P>
                 </div>
+
+            </div>
+            <div class="text-center">
+                <button class="btn btn-primary d-lg-none d-md-none text-center">View More</button>
             </div>
         </section>
 
@@ -413,7 +422,6 @@
                 </div>
             </div>
         </section>
-
         <!-- end review -->
 
         <!-- start accordian  -->
@@ -515,7 +523,6 @@
 
             </div>
         </section>
-
         <!-- end accordian -->
 
         <!-- start Companies -->
@@ -532,11 +539,11 @@
 
             </div>
         </section>
-
         <!-- end company -->
+
     </main>
 
-
+    <!-- start footer -->
     <footer class="bg-dark text-white py-4 text-center">
         <h2>TECH | LEARN</h2>
         <p class="">Office 41, Zawaya Buildin, Ghala Muscat,<br>
@@ -550,6 +557,7 @@
             <i class="fa-brands fa-instagram"></i>
         </div>
     </footer>
+    <!-- end footer -->
 
 
 
